syntax = "proto3";

package broker;
option go_package = "/;proto";
import "google/protobuf/empty.proto";

// ServiceType 
enum ServiceType {
    PROJECT = 0;
    MGW = 1;
}

// SendMessageRequest
message SendMessageRequest {
    string project = 1;
    string client_id = 2; 
    bytes message = 3;
    ServiceType recipient_type = 4; 
    ServiceType sender_type = 5;
}

// Subscribe request
message SubscribeRequest {
    string project = 1;
    string client_id = 2;
    ServiceType recipient_type = 3;
}

// Subscribe response 
message SubscribeResponse {
     string project = 1;
     bytes message = 2;
     ServiceType sender_type = 3;
}

// gRPC-service
service MessageBroker {
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}